@@ -131,6 +131,7 @@ BEGIN_MESSAGE_MAP(CLogDlg, CResizableStandAloneDialog)
 	ON_BN_CLICKED(IDC_HIDEPATHS, OnBnClickedHidepaths)
 	ON_NOTIFY(LVN_ODFINDITEM, IDC_LOGLIST, OnLvnOdfinditemLoglist)
 	ON_BN_CLICKED(IDC_CHECK_STOPONCOPY, &CLogDlg::OnBnClickedCheckStoponcopy)
+	ON_WM_SIZE()
 END_MESSAGE_MAP()
 
 
@@ -2719,26 +2720,6 @@ LRESULT CLogDlg::DefWindowProc(UINT message, WPARAM wParam, LPARAM lParam)
 			DoSizeV2(pHdr->delta);
 		}
 		break;
-	case WM_WINDOWPOSCHANGED : 
-		{
-			CRect rcW;
-			GetWindowRect(rcW);
-			ScreenToClient(rcW);
-
-			SetSplitterRange();
-			
-			if (m_wndSplitter1 && rcW.Height()>0) Invalidate();
-			if (m_wndSplitter2 && rcW.Height()>0) Invalidate();
-			break;
-		}
-	case WM_SIZE:
-		{
-			// first, let the resizing take place
-			LRESULT res = CResizableDialog::DefWindowProc(message, wParam, lParam);
-			//set range
-			SetSplitterRange();
-			return res;
-		}
 	}
 
 	return CResizableDialog::DefWindowProc(message, wParam, lParam);
@@ -2754,13 +2735,11 @@ void CLogDlg::SetSplitterRange()
 		CRect rcMiddle;
 		GetDlgItem(IDC_MSGVIEW)->GetWindowRect(rcMiddle);
 		ScreenToClient(rcMiddle);
-		if (rcMiddle.Height() && rcMiddle.Width())
-			m_wndSplitter1.SetRange(rcTop.top+20, rcMiddle.bottom-20);
+		m_wndSplitter1.SetRange(rcTop.top+20, rcMiddle.bottom-20);
 		CRect rcBottom;
 		m_LogMsgCtrl.GetWindowRect(rcBottom);
 		ScreenToClient(rcBottom);
-		if (rcBottom.Height() && rcBottom.Width())
-			m_wndSplitter2.SetRange(rcMiddle.top+20, rcBottom.bottom-20);
+		m_wndSplitter2.SetRange(rcMiddle.top+20, rcBottom.bottom-20);
 	}
 }
 
@@ -3588,4 +3567,15 @@ void CLogDlg::OnBnClickedCheckStoponcopy()
 	Refresh();
 }
 
+void CLogDlg::OnSize(UINT nType, int cx, int cy)
+{
+	__super::OnSize(nType, cx, cy);
+	if (nType == SIZE_MAXIMIZED)
+	{
+		DoSizeV1(0);
+		DoSizeV2(0);
+	}
+	//set range
+	SetSplitterRange();
+}
 
